--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "node-authentication",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "bcrypt-nodejs": "latest",
-    "body-parser": "^1.18.3",
+    "all": "0.0.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
     "ejs": "~2.5.2",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-session": "^1.15.6",
     "lodash": "^4.17.20",
     "method-override": "~2.3.6",
@@ -15,10 +19,12 @@
     "mongoose": ">=5.7.5",
     "morgan": "^1.9.1",
     "mpath": ">=0.5.1",
+    "multer": "^1.4.2",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
     "passport-local": "~1.0.0",
-    "passport-twitter": "~1.0.4"
+    "passport-twitter": "~1.0.4",
+    "socket.io": "^2.3.0"
   }
 }
